force-app/main/default/objects/DiscoveryRS__c/DiscoveryRS__c.object-meta.xml
<CustomObject>
    <label>Discovery RS</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Discovery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discoveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>