force-app/main/default/objects/DiscoveryRS__c/fields/LinkRS__c.field-meta.xml
<CustomField>
    <fullName>LinkRS__c</fullName>
    <description>RS
Site/Page link of discovery
Alphaforce/Team HER</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Link</label>
    <type>Url</type>
</CustomField>