force-app/main/default/objects/DiscoveryRS__c/fields/NotesRS__c.field-meta.xml
<CustomField>
    <fullName>NotesRS__c</fullName>
    <description>RS
Used to make free-form notes about the resources that are discovered by the Apprentice
Alphaforce/Team HER</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>